Translate home page strings into Russian

--- a/src/lib/i18n/data.json
+++ b/src/lib/i18n/data.json
@@ -1,3 +1,4 @@
+/* eslint-disable */
 {
   "expand": "Expand",
   "related-project.title": "Related project",
@@ -25,39 +26,39 @@
   "member.posts.title": "Articles",
   "member.posts.subtitle": "from this author.",
   "member.about": "About {{name}}",
-  "prefooter.title.line1": "How can we help?",
-  "prefooter.title.line2": "Let's work together.",
-  "prefooter.description": "Working together takes some practice to get in sync, but once we find our rhythm, the result can be magical!",
-  "form.subject": "Your message was delivered at Significa",
-  "contact.type.quote.title": "Get a quote",
-  "contact.type.quote.description": "For new projects",
-  "contact.type.position.title": "Apply to position",
-  "contact.type.position.description": "Be part of the team",
-  "contact.type.contact.title": "Talk to us",
-  "contact.type.contact.description": "General enquiries",
-  "contact.position.default": "Spontaneous application",
-  "contact.feedback.success.title": "Your message has been delivered!",
-  "contact.feedback.success.description": "A pigeon carrying a confirmation message will arrive at your door shortly. Either that or a confirmation email in your inbox.",
-  "contact.feedback.error.notion.title": "We couldn't deliver your message!",
-  "contact.feedback.error.notion.description": "We must've forgotten to feed our pigeons. Please try again or contact us directly.",
-  "contact.feedback.error.email.title": "Your message was delivered! ",
-  "contact.feedback.error.email.description": "But we could not confirm your email address. Did you mistype it?",
-  "contact.type.title": "What are you looking for?",
-  "contact.type.description": "Please choose an option below",
-  "contact.label.name": "Name",
-  "contact.label.email": "Email address",
-  "contact.label.budget": "Budget range",
-  "contact.label.position": "Position",
-  "contact.label.message": "Message",
-  "contact.footer.title": "Hate contact forms?",
+  "prefooter.title.line1": "Чем мы можем помочь?",
+  "prefooter.title.line2": "Давайте сотрудничать.",
+  "prefooter.description": "Совместная работа требует немного практики, чтобы настроиться, но когда мы найдем ритм, результат может быть волшебным!",
+  "form.subject": "Ваше сообщение доставлено в Significa",
+  "contact.type.quote.title": "Получить предложение",
+  "contact.type.quote.description": "Для новых проектов",
+  "contact.type.position.title": "Подать заявку на вакансию",
+  "contact.type.position.description": "Станьте частью команды",
+  "contact.type.contact.title": "Свяжитесь с нами",
+  "contact.type.contact.description": "Общие вопросы",
+  "contact.position.default": "Спонтанное обращение",
+  "contact.feedback.success.title": "Ваше сообщение отправлено!",
+  "contact.feedback.success.description": "Скоро к вам прилетит голубь с подтверждением. Или письмо на электронной почте.",
+  "contact.feedback.error.notion.title": "Не удалось отправить ваше сообщение!",
+  "contact.feedback.error.notion.description": "Наверное, мы забыли покормить голубей. Попробуйте ещё раз или свяжитесь с нами напрямую.",
+  "contact.feedback.error.email.title": "Сообщение отправлено! ",
+  "contact.feedback.error.email.description": "Но нам не удалось подтвердить ваш адрес электронной почты. Возможно, в нем опечатка?",
+  "contact.type.title": "Что вас интересует?",
+  "contact.type.description": "Пожалуйста, выберите вариант ниже",
+  "contact.label.name": "Имя",
+  "contact.label.email": "Адрес электронной почты",
+  "contact.label.budget": "Диапазон бюджета",
+  "contact.label.position": "Должность",
+  "contact.label.message": "Сообщение",
+  "contact.footer.title": "Не любите формы обратной связи?",
   "contact.footer.email": "hello@significa.co",
-  "contact.submit": "Send message",
-  "blog.pre-footer.title": "We build and launch functional digital products.",
-  "blog.pre-footer.cta": "Get a quote",
-  "contact.feedback.error.title": "Could not submit your message",
-  "contact.feedback.error.description": "Please contact us directly at hello@significa.co",
-  "contact.label.attachment.quote": "Relevant documents",
-  "contact.label.attachment.position": "CV, portfolio, or other documents",
+  "contact.submit": "Отправить сообщение",
+  "blog.pre-footer.title": "Мы создаем и запускаем функциональные цифровые продукты.",
+  "blog.pre-footer.cta": "Получить предложение",
+  "contact.feedback.error.title": "Не удалось отправить сообщение",
+  "contact.feedback.error.description": "Пожалуйста, свяжитесь с нами напрямую по адресу hello@significa.co",
+  "contact.label.attachment.quote": "Дополнительные документы",
+  "contact.label.attachment.position": "Резюме, портфолио или другие документы",
   "seo.title": "Significa — Digital Product Design & Development Agency",
   "seo.description": "Significa is a design-led agency that partners with companies all over the world to build high-quality digital products.",
   "projects.title": "Projects.",
@@ -133,7 +134,7 @@
   "proposals.awards": "Awards",
   "proposals.awards.description": "Celebrating great work achievements.",
   "proposals.projects": "Projects",
-  "contact.range": "Choose a range",
+  "contact.range": "Выберите диапазон",
   "careers.footer.no.positions": "No open positions.",
   "careers.footer.no.positions.description": "No nests to be found right now, but hatch your spontaneous application below!",
   "recognitions.award": "AWARD",
